Cambio al puntito

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   
 
   <div class="intro">
-    <h1>Así que… ¿Qué hacemos? Cualquier cosa. Alguna cosa. Mientras no nos sentemos allí.<span class="dot">.</span></h1>
+    <h1>Así que… ¿Qué hacemos? Cualquier cosa. Alguna cosa. Mientras no nos sentemos allí<span class="dot">.</span></h1>
     <div class="intro-content"><p>Esta será una página dedicada a postear acerca de todo lo que vaya aprendiendo relacionado a temas de tecnología, como programación en Python, Web3 Development, Data Science, Machine Learning y alguna otra cosa que se me aparezca en el camino. Espero que sea de utilidad para alguna persona que tenga dudas o quiera aprender algo nuevo -Andrés M. Guzmán 💜</p>
 </div>
   </div>
